fix(editor): reenabled three dots and positioned it right to every block so no overlapping happens

--- a/honestcash-v2/src/app/modules/editor/components/editor/editor.component.scss
+++ b/honestcash-v2/src/app/modules/editor/components/editor/editor.component.scss
@@ -68,7 +68,7 @@
     }
 
     .ce-toolbar__actions {
-      display: none;
+      right: -45px;
     }
 
     .ce-block__content {
